--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
     <!-- Content-Security-Policy no longer required. Will show warning in devtools. Can be ignored -->
     <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'"> -->
     <title>Hello World!</title>
+    <!-- <link rel="stylesheet" href="photon/dist/css/photon.css"> -->
     <style>
       html { font-family: sans-serif; background: #2B2E3B; color: #9FEAF9; }
+      body {
+                background-color: #f0f0f0;
+                height: 40px;
+                border-bottom: 1px solid #d0d0d0;
+                -webkit-app-region: drag;    /* Allow user to drag the window using this titlebar */
+                -webkit-user-select: none;   /* Prevent user from selecting things */
+                user-select: none;
+                margin:0;
+                padding:0;
+            }
     </style>
   </head>
   <body>
     <script>
       // You can also require other files to run in this process
       require('./renderer.js')
+      require('./preload.js')
     </script>
   </body>
 </html>
